# ESP32

./: Espressif-IDE - installation.md  Installing Eclipse IDE for C++ Developers on Linux.md  README.md  ReadMe.md  install_VPN.md  mcu-soc.md
ESP-NOW and Webserver/: ESP32NOW_PeerMaster_DHT11DataSender.ino  ESP32NOW_PeerSlave_Receiver_WebServer.ino  ReadMe.md
Hardware_Tips/: ESP32_38pin_Expansion Board.md
NTP Timepiece/: ReadMe.md
NTP Timepiece/main/: CMakeLists.txt  Kconfig.projbuild  i2c_LCD.c  i2c_LCD.h  i2c_mast_handler.c  i2c_mast_handler.h  idf_component.yml  my_ntp_clock_main.c  wifi_connector.c  wifi_connector.h
i2c_daisy_chain/: Importing to Espressif-IDE as Espressif IDF Project.md  Makefile  README.md  Upgrading FreeRTOS and esp-idf.md  Upgrading FreeRTOS, esp-idf, i2c driver.md
i2c_daisy_chain/fritzing/: ReadMe.md  Three i2c devices on PCF8574.fzz
i2c_daisy_chain/main/: CMakeLists.txt  Kconfig.projbuild  PCF8574.c  PCF8574.h  PCF8574_IO_Expander.c  PCF8574_IO_Expander.h  a_byte_of_LEDs.c  a_byte_of_LEDs.h  config_i2c_port.c  config_i2c_port.h  i2c-matrix-keypad.c  i2c-matrix-keypad.h  i2c_LCD.c  i2c_LCD.h  i2c_LED_lights.c  i2c_LED_lights.h  i2c_daisy_chain_main.c  i2c_mast_handler.c  i2c_mast_handler.h  i2c_port.c  i2c_port.h
i2c_daisy_chain_CPP/: CMakeLists.txt  PCF8574_IO_Expander.cpp  PCF8574_IO_Expander.hpp  PCF8574_device.cpp  PCF8574_device.hpp  ReadMe.md  i2c_daisy_chain_main_CPP.cpp  i2c_mast_handler.cpp  i2c_mast_handler.hpp
